--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
       <div class="paper_info">
         <h1>Unified Source-Filter GAN: Unified Source-Filter Network Based On Factorization of
           Quasi-Periodic Parallel WaveGAN</h1>
-        <h2 style="color: #000050;">Reo Yoneyama, Yi-Chiao Wu, Tomoki Toda</h2>
+        <h2 class="author">Reo Yoneyama, <a href="https://bigpon.github.io/">Yi-Chiao Wu</a>, <a
+            href="https://sites.google.com/site/tomokitoda/">Tomoki Toda</a></h2>
         <h2>Nagoya University</h2>
         <h2 style="margin-top: 10px;">Accepted to <a
             href="https://www.isca-speech.org/archive/interspeech_2021/yoneyama21_interspeech.html">InterSpeech 2021</a>
@@ -128,7 +129,8 @@
       <div id="demo" class="section">
 
         <p>Comparison with baselines on CMU-ARCTIC [1] corpus. The baseline models are WORLD [2], NSF [3] and QP-PWG
-          [4].</p>
+          [4].</p> Please also see the demo of our new work harmonic-plus-noise uSFGAN <a
+          href="https://chomeyama.github.io/HN-UnifiedSourceFilterGAN-Demo/">here</a>.
         <br>
 
         <div class="selects">
