--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Material+Icons+Outlined" rel="stylesheet">
   <link href="css/style.css" media="all" rel="stylesheet" type="text/css">
-  <link rel="shortcut icon" href="img/me2.jpg">
+  <link rel="shortcut icon" href="img/me2.ico">
   <link rel=”canonical” href=”https://chomeyama.github.io/Profile/”>
 
   <script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI="
